frontend finished and mqtt fixes from backend side
